Fix focus state of table form input elements.
Resets the margin so that the focus shadow covers the whole area.

--- a/src/main/webapp/css/jenkins-style.css
+++ b/src/main/webapp/css/jenkins-style.css
@@ -52,6 +52,7 @@ div.details-control {
 /* ------------------------------------------------------------------------------------------------------------------- */
 /* Custom column widths for property tables                                                                            */
 /* ------------------------------------------------------------------------------------------------------------------- */
+
 .col-width-0 {
     width: 0%;
 }
@@ -71,3 +72,10 @@ div.details-control {
     width: 50%;
 }
 
+/* ------------------------------------------------------------------------------------------------------------------- */
+/* Fix focus state of table form input elements (pagination select and search)                                         */
+/* ------------------------------------------------------------------------------------------------------------------- */
+
+.form-select-sm, .form-control-sm {
+    margin: 0.2em;
+}
